# backend/internal/adapter/handler/http/features/ujian/create/peserta_ujian/create_request.go
@@ -1,9 +1,0 @@
-package httpx
-
-import "time"
-
-type CreatePesertaUjianRequest struct {
-	IdJadwalUjian int        `json:"id_jadwal_ujian"`
-	IdSiswa       int        `json:"id_siswa"`
-	WaktuMulai    *time.Time `json:"waktu_mulai,omitempty"`
-}
