# backend/internal/adapter/handler/http/features/ujian/create/peserta_ujian/validating_input.go
@@ -1,10 +1,0 @@
-package httpx
-
-import coreerror "github.com/mustafamadjid/web-app-cbt/internal/core/core_error"
-
-func ValidateInputIdRequestPesertUjian(data CreatePesertaUjianRequest) error {
-	if data.IdJadwalUjian <= 0 || data.IdSiswa <= 0 {
-		return coreerror.ErrMissingId
-	}
-	return nil
-}
