# backend/internal/adapter/handler/http/features/ujian/delete/peserta_ujian/delete_request.go
@@ -1,5 +1,0 @@
-package httpx
-
-type DeletePesertaUjianRequest struct {
-	IDPesertaUjian int
-}
