# backend/internal/adapter/handler/http/features/ujian/update/peserta_ujian/update_request.go
@@ -1,11 +1,0 @@
-package httpx
-
-import "time"
-
-type UpdatePesertaUjianRequest struct {
-	IdJadwalUjian *int       `json:"id_jadwal_ujian"`
-	IdSiswa       *int       `json:"id_siswa"`
-	WaktuMulai    *time.Time `json:"waktu_mulai"`
-	WaktuSubmit   *time.Time `json:"waktu_submit"`
-	NilaiUjian    *float64   `json:"nilai_ujian"`
-}
